# ChatGPT_Image_API_SAM2

./: docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 21063fc1581a_delete_column_role.py  a8091bab5809_init_database.py  cf40bf3bd163_init_database.py  ed9ac9326cbf_init_database.py
backend/api/v1/: api.py
backend/api/v1/routes/: auto_segment.py  download.py  generate_image.py  generate_video.py  login.py  picture_ads.py  upload.py
backend/api/v1/schemas/: auth.py  auto_segment.py  base.py  generate_image.py  upload.py  video.py
backend/api/v1/services/: auth.py  auto_segment.py  generate_video.py  google_cloud.py  image.py  leonardo.py
backend/core/: config.py  database.py  google_cloud.py  security.py  websocket.py
backend/helpers/: enums.py  execption.py  logging.py  middleware.py
backend/models/: user.py
backend/nginx/: default.conf
frontend/: .env.development  .env.production  .prettierrc  Dockerfile  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/nginx/: default.conf
frontend/settings/: default.conf
frontend/src/: index.css  main.jsx
frontend/src/assets/: my_earnings_jun_1_2024_may_17_2025.csv
frontend/src/helpers/: RouteGuard.jsx
frontend/src/hooks/: useImageContour.js  useWebSocketConnection.js
frontend/src/pages/: index.jsx
frontend/src/redux/: index.jsx  rootReducer.jsx
frontend/src/routes/: index.jsx  routeName.js
(+41 files in other folders)
